--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -10,7 +10,12 @@ body
 
 #header, #footer
 {
-	text-align: center;
+	margin: 10px;
+}
+
+#footer
+{
+	color: #aaa;
 }
 
 .todo-list
@@ -26,4 +31,10 @@ body
 .completed
 {
 	text-decoration: line-through;
+}
+
+table
+{
+	width: 50%;
+	margin: 0 auto;
 }
