--- a/app/views/todos/index.haml
+++ b/app/views/todos/index.haml
@@ -1,31 +1,22 @@
-- if @errors
-	#errors 
-		The following errors must be corrected:	
-		- @errors.each do |key, err|
-			.err_key
-				= key.to_s + "..." 
-				- err.each do |e|
-					.err_val= e
-
-
-= form_tag url_for( :todos, :index ), :method => 'post' do
-	%div
-		= label_tag :title
-		= text_field_tag :title, :value => params[:title]
-	%div
-		= label_tag :author
-		= text_field_tag :author, :value => params[:author]	
-	= submit_tag "New Task"
-
-%table 
-	%tr
-		%th Title
-		%th Completed
-		%th Author
-		%th Created
-		- @todos.each_with_index do |t, i|
-			%tr
-				%td= t.title
-				%td= t.is_complete
-				%td= t.author
-				%td= @todo_dates[i]
+#application
+%template#todo_list_tmpl
+  %input{"data-bind" => "value: $view.new_todo_text", :type => "text"}/
+  %button{"data-bind" => "click: $view.addTodo"} Add
+  %div.todo-list{"data-bind" => "foreach: $view.todos"}
+    %div.todo
+      %span{"data-bind" => "css: {'completed': is_complete}"}
+        / ko if: is_editing
+        %input{"data-bind" => "value: text, event: { change: $view.editTodo}", :type => "text"}
+        %a{"data-bind" => "click:$view.editTodo", :href => '#'} [Done]
+        / /ko
+        / ko ifnot: is_editing 
+        %span{"data-bind" => "text: text", :href => "#"} 
+        %a{"data-bind" => "click:$view.editTodo", :href => '#'} [Edit]
+        / /ko
+      / ko if: is_complete
+      %a{"data-bind" => "click:$view.toggleTodo", :href => "#"} [Undo]
+      / /ko
+      / ko ifnot: is_complete
+      %a{"data-bind" => "click:$view.toggleTodo", :href => "#"} [Complete]
+      / /ko
+      %a{"data-bind" => "click:$view.removeTodo", :href => "#"} [X]
