--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -1,8 +1,22 @@
+$font-stack: sans;
+/*
+html 
+{
+	background: url(/images/kitten.png) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+*/
 body
 {
+	background: #eee;
+	padding: 10px;
 	width: 920px;
 	margin: 0 auto;
 	text-align: center;
+	font-family: $font-stack;
 }
 
 #header, #footer
@@ -34,4 +48,9 @@ table
 {
 	width: 50%;
 	margin: 0 auto;
+}
+
+.author
+{
+	color: #666;	
 }
