--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -3,7 +3,7 @@
   %head
     %title= [@title, "ToDone Task Manager"].compact.join(" | ")
     = stylesheet_link_tag 'application'
-    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js', 'knockout-3.1.0','falcon', 'application'
+    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js', 'knockout-3.1.0', 'falcon', 'falcon.jquery_adapter.min.js','application'
   %body
     #header
       %h1 ToDone Task Manager
