--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -2,6 +2,15 @@ $font-stack: sans;
 /**
  * general page and layout styles
  */
+html 
+{
+	background: url(/images/trees.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body
 {
 	background: #eee;
