--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,13 @@
 /**
  * general page and layout styles
  */
+html {
+  background: url(/images/trees.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
 body {
   background: #eee;
   padding: 10px;
