--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,28 +2,55 @@
  * general page and layout styles
  */
 html {
-  background: url(/images/trees.jpg) no-repeat center center fixed;
+  background: url(/images/trees_blur.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
 
 body {
-  background: #eee;
-  padding: 10px;
-  width: 920px;
+  max-width: 920px;
   margin: 0 auto;
   text-align: center;
-  font-family: sans; }
+  background: transparent;
+  color: #fff; }
 
-header, footer {
+#container {
+  background: rgba(20, 20, 20, 0.85);
+  padding: 10px;
+  margin: 20px auto 50px auto;
+  text-align: center; }
+
+header {
   margin: 10px; }
 
-footer p {
-  color: #dedede;
-  transition: color 1.5s; }
-footer p:hover {
-  color: #aaa; }
+footer {
+  z-index: -1;
+  position: fixed;
+  bottom: 0;
+  width: 920px;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 12pt; }
+  footer inner {
+    padding: 30px; }
+  footer p {
+    color: #999;
+    transition: color 1s; }
+  footer p:hover {
+    color: #fff; }
+
+#errors {
+  max-width: 350px;
+  margin: 0 auto 15px auto;
+  padding: 10px;
+  color: #000; }
+
+#add_todo {
+  width: 600px; }
+
+.form-control {
+  color: #222; }
 
 .todo-list {
   margin: 10px 0; }
@@ -31,14 +58,19 @@ footer p:hover {
 .todo {
   padding: 5px; }
 
+.todo_title {
+  font-size: 13pt; }
+
 .completed {
   text-decoration: line-through; }
 
-table {
-  width: 50%;
-  margin: 0 auto; }
+#separator {
+  margin-left: 7px; }
 
-.author {
-  color: #666; }
+.rounded {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  border-radius: 6px; }
 
 /*# sourceMappingURL=application.css.map */
